--- a/css/normalize.css
+++ b/css/normalize.css
@@ -29,7 +29,7 @@ Set Variables
   --green-color: #32c350;
   --accent-color: #1e73be;
   --hover-color: #aad1e8;
-  --links-hover: #aad1e847;
+  --links-hover: #aad1e8;
   --yellow-color: #ffd449;
   --orange-color: #f9a620;
 
